--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">MeetMap</string>
+    <string name="create">Create Account</string>
     <string name="login">Login</string>
+    <string name="slide1">Bienvenido a MeetMap</string>
+    <string name="slide2">Encuentra las actividades más cercanas</string>
+    <string name="slide3">Apuntate a ellas y contacta con otros usuarios!</string>
+    <string name="slide4">Entabla amistades y forja nuevas aventuras</string>
 </resources>
