--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">MeetMap</string>
     <string name="login">Login</string>
+    <string name="usu">User name</string>
+    <string name="pass">Password</string>
+    <string name="cancel">Cancel</string>
+    <string name="other">or sign up with</string>
 </resources>
