--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="login">LOGIN</string>
     <string name="newaccount">SIGN UP</string>
     <string name="usu">User name</string>
+    <string name="email">Email</string>
     <string name="pass">Password</string>
     <string name="repass">Repeat password</string>
     <string name="cancel">Cancel</string>
