--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">MeetMap</string>
     <string name="login">LOGIN</string>
     <string name="newaccount">SIGN UP</string>
-    <string name="usu">User name</string>
+    <string name="usu">User email</string>
     <string name="pass">Password</string>
     <string name="repass">Repeat password</string>
     <string name="cancel">Cancel</string>
