button navigation view

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -26,7 +26,7 @@
     <string name="logout">CERRAR SESIÓN</string>
     <string name="deleteaccount">ELIMINAR CUENTA</string>
     <string name="favourites">Favoritos</string>
-    <string name="home">Casa</string>
+    <string name="home">Inicio</string>
     <string name="chat">Conversaciones</string>
     <string name="profile">Perfil</string>
     <string name="favfragment">FRAGMENTO FAVORITOS</string>
