menu item navigation view with click except logout y delete account

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -31,4 +31,7 @@
     <string name="profile">Perfil</string>
     <string name="favfragment">FRAGMENTO FAVORITOS</string>
     <string name="chatfragment">FRAGMENTO CONVERSACIONES</string>
+    <string name="exit">Cerrar sesión</string>
+    <string name="notifications">Notificaciones</string>
+    <string name="editProfile">Editar perfil</string>
 </resources>
