item user manual without implementation

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -34,4 +34,5 @@
     <string name="exit">Cerrar sesión</string>
     <string name="notifications">Notificaciones</string>
     <string name="editProfile">Editar perfil</string>
+    <string name="manusu">Manual Usuario</string>
 </resources>
