--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -35,4 +35,5 @@
     <string name="notifications">Notificaciones</string>
     <string name="editProfile">Editar perfil</string>
     <string name="manusu">Manual Usuario</string>
+    <string name="createplan">Nuevo plan</string>
 </resources>
