--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="repass">Repeat password</string>
     <string name="cancel">Cancel</string>
     <string name="other">or sign up with</string>
-    <string name="create">Create Account</string>
+    <string name="or">or </string>
+    <string name="create">Sign Up</string>
     <string name="slide1">Bienvenido a MeetMap</string>
     <string name="slide2">Encuentra las actividades más cercanas</string>
     <string name="slide3">Apuntate a ellas y contacta con otros usuarios!</string>
@@ -35,6 +36,7 @@
     <string name="editProfile">Edit profile</string>
     <string name="notifications">Notifications</string>
     <string name="manusu">User manual</string>
+    <string name="faqs">FAQs</string>
     <string name="createplan">New plan</string>
     <string name="textLarge" translatable="false">Lorem fistrum ese hombree hasta luego Lucas va usté muy cargadoo sexuarl de la pradera a wan ahorarr apetecan. La caidita la caidita te va a hasé pupitaa pecador ese pedazo de caballo blanco caballo negroorl quietooor. Jarl hasta luego Lucas papaar papaar tiene musho peligro se calle ustée te voy a borrar el cerito mamaar qué dise usteer.</string>
     <string name="large_text" translatable="false">
