--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -8,17 +8,17 @@
     <string name="pass">Contraseña</string>
     <string name="repass">Repita contraseña</string>
     <string name="cancel">Cancelar</string>
-    <string name="other">O reigstrese con</string>
-    <string name="create">Registrarse</string>
+    <string name="other">O registrese con</string>
+    <string name="create">REGISTRO</string>
     <string name="description">Tu descripción</string>
     <string name="save">GUARDAR</string>
     <string name="telefono">Número de teléfono</string>
     <string name="surname">Apellido</string>
     <string name="name">Nombre</string>
-    <string name="slide1">Bienvenido a MeetMap</string>
-    <string name="slide2">Encuentra las actividades más cercanas</string>
-    <string name="slide3">Apuntate a ellas y contacta con otros usuarios!</string>
-    <string name="slide4">Entabla amistades y forja nuevas aventuras</string>
+    <string name="slide1">Bienvenid@ a MeetMap</string>
+    <string name="slide2">Vive nuevas experiencias a nuestro lado</string>
+    <string name="slide3">Conecta con nuevas personas y crea momentos.</string>
+    <string name="slide4">Experimenta junt@s, recuerda junt@s</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="title_activity_main_app">MainAppActivity</string>
     <string name="tab_text_1">Tab 1</string>
@@ -39,4 +39,5 @@
     <string name="or" translatable="false">o</string>
     <string name="faqs">Preguntas frecuentes</string>
     <string name="resetpass">¿Has olvidado la contraseña?</string>
+    <string name="fgPass">RESETEAR CONTRASEÑA</string>
 </resources>
