Contact fragments, include contact fragment in mainAppActivity, string eng/esp

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -61,5 +61,7 @@
     <string name="question10">10. ¿Puedo contactar con las personas que están apuntadas a la actividad?</string>
     <string name="answer10">En las primeras versiones de la app el chat todavía no está disponible, a la mayor brevedad posible tendrá a su disposición un chat para poder contactar con todas las personas que están apuntadas en la actividad y quieran tener conversaciones con los asistentes a la actividad o evento</string>
     <string name="contactus">Contacte con nosotros</string>
+    <string name="suggestion">Sugerencia o Incidencia</string>
+    <string name="send">ENVIAR</string>
 
 </resources>
