--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,8 @@
     <string name="question10">10. Can I contact the people who are signed up for the activity?</string>
     <string name="answer10">In the first versions of the app the chat is not yet available, as soon as possible you will have a chat available to contact all the people who are signed up for the activity and want to have conversations with the attendees of the activity or event</string>
     <string name="contactus">Contact us</string>
+    <string name="suggestion">Suggestion or Incidence</string>
+    <string name="send">SEND</string>
     <string name="textLarge" translatable="false">Lorem fistrum ese hombree hasta luego Lucas va usté muy cargadoo sexuarl de la pradera a wan ahorarr apetecan. La caidita la caidita te va a hasé pupitaa pecador ese pedazo de caballo blanco caballo negroorl quietooor. Jarl hasta luego Lucas papaar papaar tiene musho peligro se calle ustée te voy a borrar el cerito mamaar qué dise usteer.</string>
     <string name="large_text" translatable="false">
         "Material is the metaphor.\n\n"
@@ -151,4 +153,6 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <!-- TODO: Remove or change this placeholder text -->
+
 </resources>
