Include notifications fragment in mainAppActivity, string eng/esp, image work in progress for for fragments under construction

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -60,7 +60,7 @@
     <string name="answer9">Actualmente la aplicación solo está disponible para la ciudad de Madrid, aunque en un futuro no muy lejano tenemos previsto estar presente en más ciudades y países. Si quieres que esté en tu región, ¡no dudes en contactar con nosotros para hacernos llegar tu petición!</string>
     <string name="question10">10. ¿Puedo contactar con las personas que están apuntadas a la actividad?</string>
     <string name="answer10">En las primeras versiones de la app el chat todavía no está disponible, a la mayor brevedad posible tendrá a su disposición un chat para poder contactar con todas las personas que están apuntadas en la actividad y quieran tener conversaciones con los asistentes a la actividad o evento</string>
-    <string name="contactus">Contacte con nosotros</string>
+    <string name="contactus">Contáctanos</string>
     <string name="suggestion">Sugerencia o Incidencia</string>
     <string name="send">ENVIAR</string>
 
