--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,10 @@
     <string name="send">SEND</string>
     <string name="infocontactus">We will respond as soon as possible, check the email you provide in this form</string>
     <string name="textLarge" translatable="false">Lorem fistrum ese hombree hasta luego Lucas va usté muy cargadoo sexuarl de la pradera a wan ahorarr apetecan. La caidita la caidita te va a hasé pupitaa pecador ese pedazo de caballo blanco caballo negroorl quietooor. Jarl hasta luego Lucas papaar papaar tiene musho peligro se calle ustée te voy a borrar el cerito mamaar qué dise usteer.</string>
+    <string name="date">Date: </string>
+    <string name="schedule">Schedule: </string>
+    <string name="place">Place: </string>
+
 
     <string name="large_text" translatable="false">
         "Material is the metaphor.\n\n"
