change size and strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -67,4 +67,5 @@
     <string name="date">Fecha: </string>
     <string name="schedule">Horario: </string>
     <string name="place">Lugar: </string>
+    <string name="link">+Info</string>
 </resources>
