--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,5 +96,7 @@
     <string name="deleteAccountSuccesful">The account has been deleted</string>
     <string name="messagechat">Message</string>
     <string name="nochats">"How calm everything is..."</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
