--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -93,8 +93,8 @@
     <string name="backAgain">Por favor pulse ATRÁS otra vez para salir</string>
     <string name="deleteAccountQuestion">¿Está seguro que desea eliminar la cuenta?</string>
     <string name="deleteAccountSuccesful">La cuenta se ha eliminado</string>
-    <string name="messagechat">Mensaje</string>
-    <string name="nochats">"Demasiada tranquilidad por aquí..."</string>
+    <string name="messagechat">Te quiero contar que...</string>
+    <string name="nochats">"Qué tranquilo está todo por aquí..."</string>
 
 
 </resources>
