fix: hidden notifications and control of the app when there is no internet connection so that it does not break the app through an alert with retries

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,5 +96,8 @@
     <string name="deleteAccountSuccesful">The account has been deleted</string>
     <string name="messagechat">I want to tell you that...</string>
     <string name="nochats">"How quiet everything is around here..."</string>
+    <string name ="nointernetitle">"Oops no internet connection!"</string>
+    <string name="nointernetsubtitle">"Meetmap is looking forward to having you. Do you want to continue testing?"</string>
+    <string name="nointernetbtn">"Retry"</string>
 
 </resources>
