--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -95,6 +95,8 @@
     <string name="deleteAccountSuccesful">La cuenta se ha eliminado</string>
     <string name="messagechat">Te quiero contar que...</string>
     <string name="nochats">"Qué tranquilo está todo por aquí..."</string>
-
+    <string name ="nointernetitle">"¡Ups no hay conexión a Internet!"</string>
+    <string name="nointernetsubtitle">"Meetmap está deseando contar contigo. ¿Quieres seguir probando?"</string>
+    <string name="nointernetbtn">"Reintentar"</string>
 
 </resources>
