Change title and subtitle text if it is retried more than twice and allows you to exit the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,7 +97,9 @@
     <string name="messagechat">I want to tell you that...</string>
     <string name="nochats">"How quiet everything is around here..."</string>
     <string name ="nointernetitle">"Oops no internet connection!"</string>
-    <string name="nointernetsubtitle">"Meetmap is looking forward to having you. Do you want to continue testing?"</string>
+    <string name ="nointernetitleexit">"We want to see you soon!"</string>
+    <string name="nointernetsubtitle">"MeetMap is looking forward to having you. Do you want to continue testing?"</string>
+    <string name="nointernetsubtitleexit">"MeetMap wants to count on you, when you have internet we will be waiting for you"</string>
     <string name="nointernetbtn">"Retry"</string>
     <string name="exitalert">Exit</string>
 
