--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,14 +94,16 @@
     <string name="backAgain">Please click BACK again to exit</string>
     <string name="deleteAccountQuestion">Are you sure you want to delete the account?</string>
     <string name="deleteAccountSuccesful">The account has been deleted</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="location_menu">Actividades a menos de 1000 metros</string>
+    <string name="location_menu">Activities less than 1000 meters</string>
     <string name="messagechat">I want to tell you that...</string>
     <string name="nochats">"How quiet everything is around here..."</string>
     <string name ="nointernetitle">"Oops no internet connection!"</string>
     <string name ="nointernetitleexit">"We want to see you soon!"</string>
     <string name="nointernetsubtitle">"MeetMap is looking forward to having you. Do you want to continue testing?"</string>
     <string name="nointernetsubtitleexit">"MeetMap wants to count on you, when you have internet we will be waiting for you"</string>
-    <string name="nointernetbtn">"Retry"</string>
+    <string name="nointernetbtn">Retry</string>
     <string name="exitalert">Exit</string>
+    <string name="existUserChat">It\'s a Meetmapper!</string>
+    <string name ="noExistUserChat">She/He doesn\'t know us, tell her/him about MeetMap</string>
+
    </resources>
