--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MeetMap</string>
-    <string name="login">LOGIN</string>
+    <string name="login">LOG IN</string>
     <string name="newaccount">SIGN UP</string>
     <string name="usu">User name</string>
     <string name="email">Email</string>
@@ -98,10 +98,11 @@
     <string name="location_menu">Actividades a menos de 1000 metros</string>
     <string name="messagechat">I want to tell you that...</string>
     <string name="nochats">"How quiet everything is around here..."</string>
-    <string name ="nointernetitle">"Oops no internet connection!"</string>
-    <string name ="nointernetitleexit">"We want to see you soon!"</string>
+    <string name="nointernetitle">"Oops no internet connection!"</string>
+    <string name="nointernetitleexit">"We want to see you soon!"</string>
     <string name="nointernetsubtitle">"MeetMap is looking forward to having you. Do you want to continue testing?"</string>
     <string name="nointernetsubtitleexit">"MeetMap wants to count on you, when you have internet we will be waiting for you"</string>
     <string name="nointernetbtn">"Retry"</string>
     <string name="exitalert">Exit</string>
-   </resources>
+    <string name="title_activity_prueba_mapa">PruebaMapa</string>
+</resources>
