--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -104,4 +104,5 @@
     <string name="existUserChat">¡Es un Meetmapper!</string>
     <string name ="noExistUserChat">No nos conoce, háblale de MeetMap</string>
     <string name="location_menu">Actividades a menos de 1000 metros</string>
+    <string name="slogan_splash">¿Ya tienes plan para hoy?</string>
 </resources>
