changed designs for profileview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="exitalert">Exit</string>
     <string name="existUserChat">It\'s a Meetmapper!</string>
     <string name ="noExistUserChat">She/He doesn\'t know us, tell her/him about MeetMap</string>
-   </resources>
+    <string name="description2">Description</string>
+</resources>
